cambios leanim proveedores

--- a/LeaniM/compras.html
+++ b/LeaniM/compras.html
@@ -44,7 +44,7 @@
           <a href="./" class="nav-link">Dashboard</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="./precios.html" class="nav-link">Productos</a>
+          <a href="./productos.html" class="nav-link">Productos</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
           <a href="./pagos.html" class="nav-link">Pagos</a>
@@ -129,7 +129,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="./precios.html" class="nav-link">
+              <a href="./productos.html" class="nav-link">
                 <i class="fas fa-cash-register nav-icon"></i>
                 <p>Productos</p>
               </a>
