--- a/LeaniM/productos.html
+++ b/LeaniM/productos.html
@@ -44,7 +44,7 @@
           <a href="./" class="nav-link">Dashboard</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="./precios.html" class="nav-link">Productos</a>
+          <a href="./productos.html" class="nav-link">Productos</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
           <a href="./pagos.html" class="nav-link">Pagos</a>
@@ -122,33 +122,22 @@
                 </li>
               </ul>
             </li>
-            <li class="nav-item has-treeview">
-              <a href="#" class="nav-link">
-                <i class="nav-icon fas fa-truck"></i>
-                <p>
-                  Proveedores
-                  <i class="fas fa-angle-left right"></i>
-                </p>
+            <li class="nav-item">
+              <a href="./proveedores.html" class="nav-link">
+                <i class="fa fa-industry nav-icon"></i>
+                <p>Proveedores</p>
               </a>
-              <ul class="nav nav-treeview bg-navy pl-2">
-                <li class="nav-item">
-                  <a href="./proveedores.html" class="nav-link">
-                    <i class="fa fa-industry nav-icon"></i>
-                    <p>Proveedores</p>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="./compras.html" class="nav-link">
-                    <i class="fa fa-users nav-icon"></i>
-                    <p>Compras</p>
-                  </a>
-                </li>
-              </ul>
             </li>
             <li class="nav-item">
-              <a href="./precios.html" class="nav-link active">
+              <a href="./productos.html" class="nav-link active">
                 <i class="fas fa-cash-register nav-icon"></i>
                 <p>Productos</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="./compras.html" class="nav-link">
+                <i class="fa fa-shopping-cart nav-icon"></i>
+                <p>Compras</p>
               </a>
             </li>
             <li class="nav-item">
