preparando el ajax en compras y datatable de provs

--- a/LeaniM/Atoms/compras.html
+++ b/LeaniM/Atoms/compras.html
@@ -316,13 +316,15 @@
                       </div>
                     </div>
                     <div>
-                      <button type="button" onclick="addProduct()" class="btn btn-success">Agregar otro
-                        producto</button>
-                      <button type="button" onclick="deleteProduct()" class="btn mx-3 btn-danger" id="borrarProducto"
-                        style="display: none;">Eliminar producto</button>
+                      <button type="button" onclick="addProduct()" class="btn btn-success"><i class="fa fa-plus"> </i>
+                        Agregar otro producto</button>
+                      <button type="button" onclick="deleteProduct()" class="btn btn-danger" id="borrarProducto"
+                        style="display: none;"><i class="fa fa-minus"> </i> Eliminar producto</button>
                     </div>
+                    <hr>
                     <div class="float-right">
-                      <button type="submit" class="btn font-weight-bold btn-warning mx-3">INGRESAR COMPRA</button>
+                      <button type="submit" class="btn font-weight-bold btn-warning mr-3" id="submitBtn">INGRESAR
+                        COMPRA</button>
                       <button type="reset" class="btn btn-default">Cancelar</button>
                     </div>
                   </form>
